--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,20 @@
 <resources>
     <string name="app_name">NoteAppCleanArchitecture</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title">Title</string>
+    <string name="description">Desctiption</string>
+    <string name="categories">Categories</string>
+    <string name="priority">Priority</string>
+    <string name="save">Save</string>
+    <string name="edit">Edit</string>
+    <string name="delete">Delete</string>
+    <string name="search">Search</string>
+    <string name="my_note">My Note</string>
+    <string name="navigation_drawer_open">navigatoin_drawer_open</string>
+    <string name="navigation_drawer_close">navigaton_drawer_close</string>
+    <string name="lastname">Last name</string>
+    <string name="mail">Email</string>
+    <string name="firstname">First Name</string>
+    <string name="change_photo">Change photo</string>
 </resources>
