--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="exit">Exit</string>
     <string name="darkmode">DarkMode</string>
     <string name="language">Language</string>
+    <string name="version">Version</string>
 </resources>
