--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="darkmode">DarkMode</string>
     <string name="language">Language</string>
     <string name="version">Version</string>
+    <string name="share_to_friends">Share to friends</string>
 </resources>
