--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,11 @@
     <string name="language">Language</string>
     <string name="version">Version</string>
     <string name="share_to_friends">Share to friends</string>
+    <string name="instagram_id">Instagram ID</string>
+    <string name="youtube_id">Youtube ID</string>
+    <string name="telgram_id">Telegram ID</string>
+    <string name="contact_us">Contact Us</string>
+    <string name="aboutUs">About Us</string>
+    <string name="aboutUs2">About Us 2</string>
+    <string name="telgram">Telegram</string>
 </resources>
